# flake8-fill-one-line

./: .flake8  LICENCE  README.md  README.rst  flake8_fill_one_line.py  requirements.lint.txt  setup.cfg  setup.py
.github/workflows/: release.yaml  test.yaml
flake8_fill_one_line/: call_analyzer.py  check.py  def_analyzer.py  utils.py
flake8_fill_one_line/analyzers/: call_analyzer.py  def_analyzer.py  if_analyzer.py  if_exp_analyzer.py  import_analyzer.py  with_analyzer.py
tests/: flake8_fill_one_line_test.py  test_flake8_fill_one_line.py
tests/check_files/: calls.py  definitions.py  if_statements.py  other.py  with_statements.py
tests/test_files/: calls.py  imports.py  simple_impossible.py  simple_possible.py
