[metadata]
name = "flake8-fill-one-line"
description = A Flake8 plugin to ensure an expression can be written in one line without exceeding the maximum length limit
long_description = file: README.rst
long_description_content_type = 'text/markdown'
url = https://github.com/dronperminov/flake8-fill-one-line
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = flake8_fill_one_line
install_requires = 
	flake8>=3.7
	astunparse>=1.6
python_requires = >=3.8

[options.entry_points]
flake8.extension =
    FOL=flake8_fill_one_line.check:FillOneLineChecker
