[metadata]
name = flake8-fill-one-line
version = attr: flake8_fill_one_line.__version__
description = A Flake8 plugin to ensure an expression can be written in one line without exceeding the maximum length limit
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_files = LICENSE
url = https://github.com/dronperminov/flake8-fill-one-line
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = flake8_fill_one_line.check
    flake8_fill_one_line.utils
    flake8_fill_one_line.analyzers.call_analyzer
    flake8_fill_one_line.analyzers.def_analyzer
    flake8_fill_one_line.analyzers.if_analyzer
    flake8_fill_one_line.analyzers.if_exp_analyzer
    flake8_fill_one_line.analyzers.import_analyzer
    flake8_fill_one_line.analyzers.with_analyzer

install_requires = 
	flake8>=3.7
	astunparse>=1.6
python_requires = >=3.8

[options.entry_points]
flake8.extension =
    FOL=flake8_fill_one_line.check:FillOneLineChecker
